[package]
name = "eth_balance_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["rustls", "ws"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
teloxide = "0.12"